--- a/slides.html
+++ b/slides.html
@@ -17,23 +17,23 @@
             letter-spacing: normal;
             text-transform: none;
         }
-        @media screen {
-            body:after {
-                background-image: url(https://binx.io/img/icons/apple-touch-icon.png);
-                background-size: 100px;
-                display: inline-block;
-                width: 100px; 
-                height: 100px;
-                content:"";
-                position: fixed;
-                bottom: 0.5em;
-                left: 1em;
-                box-shadow: 5px 5px 10px #000;
-                border: 0px;
-                -webkit-box-shadow: none;
-                -moz-box-shadow: none;
-                box-shadow: none;
-            }
+        .pdf-page:after,
+        .reveal:after {
+            background-image: url(https://binx.io/img/icons/apple-touch-icon.png);
+            background-size: 100px;
+            display: inline-block;
+            width: 100px; 
+            height: 100px;
+            content:"";
+            position: absolute;
+            bottom: 0.5em;
+            left: 0.5em;
+            box-shadow: 5px 5px 10px #000;
+            border: 0px;
+            -webkit-box-shadow: none;
+            -moz-box-shadow: none;
+            box-shadow: none;
+            z-index: 9999999;
         }
         .reveal code {
             background: #efefef;
